@@ -18,6 +18,7 @@
  */
 package org.apache.accumulo.core.file.rfile;
 
+import static java.nio.charset.StandardCharsets.UTF_8;
 import static org.apache.accumulo.core.file.rfile.GenerateSplits.getEvenlySpacedSplits;
 import static org.apache.accumulo.core.file.rfile.GenerateSplits.main;
 import static org.apache.accumulo.core.file.rfile.RFileTest.newColFamByteSequence;
@@ -27,16 +28,17 @@ import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertThrows;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 
-import java.io.File;
 import java.io.FileNotFoundException;
-import java.io.FileOutputStream;
 import java.io.IOException;
 import java.nio.file.Files;
-import java.nio.file.Paths;
+import java.nio.file.Path;
+import java.util.Arrays;
+import java.util.Base64;
 import java.util.Iterator;
 import java.util.List;
 import java.util.Set;
 import java.util.TreeSet;
+import java.util.stream.Collectors;
 
 import org.junit.jupiter.api.BeforeAll;
 import org.junit.jupiter.api.Test;
@@ -51,7 +53,7 @@ public class GenerateSplitsTest {
   private static final Logger log = LoggerFactory.getLogger(GenerateSplitsTest.class);
 
   @TempDir
-  private static File tempDir;
+  private static Path tempDir;
 
   private static final RFileTest.TestRFile trf = new RFileTest.TestRFile(null);
   private static String rfilePath;
@@ -73,17 +75,17 @@ public class GenerateSplitsTest {
     trf.writer.append(newKey("r6", "cf4", "cq1", "L1", 55), newValue("foo6"));
     trf.closeWriter();
 
-    File file = new File(tempDir, "testGenerateSplits.rf");
-    assertTrue(file.createNewFile(), "Failed to create file: " + file);
-    try (var fileOutputStream = new FileOutputStream(file)) {
+    Path file = Files.createFile(tempDir.resolve("testGenerateSplits.rf"));
+    assertTrue(Files.exists(file), "Failed to create file: " + file);
+    try (var fileOutputStream = Files.newOutputStream(file)) {
       fileOutputStream.write(trf.baos.toByteArray());
     }
-    rfilePath = "file:" + file.getAbsolutePath();
+    rfilePath = "file:" + file.toAbsolutePath();
     log.info("Wrote to file {}", rfilePath);
 
-    File splitsFile = new File(tempDir, "testSplitsFile");
-    assertTrue(splitsFile.createNewFile(), "Failed to create file: " + splitsFile);
-    splitsFilePath = splitsFile.getAbsolutePath();
+    Path splitsFile = Files.createFile(tempDir.resolve("testSplitsFile"));
+    assertTrue(Files.exists(splitsFile), "Failed to create file: " + splitsFile);
+    splitsFilePath = splitsFile.toAbsolutePath().toString();
   }
 
   @Test
@@ -91,13 +93,13 @@ public class GenerateSplitsTest {
     List<String> args = List.of(rfilePath, "--num", "2", "-sf", splitsFilePath);
     log.info("Invoking GenerateSplits with {}", args);
     GenerateSplits.main(args.toArray(new String[0]));
-    verifySplitsFile("r3", "r6");
+    verifySplitsFile(false, "r6", "r3");
 
     // test more splits requested than indices
     args = List.of(rfilePath, "--num", "4", "-sf", splitsFilePath);
     log.info("Invoking GenerateSplits with {}", args);
     GenerateSplits.main(args.toArray(new String[0]));
-    verifySplitsFile("r2", "r3", "r4", "r5");
+    verifySplitsFile(false, "r2", "r3", "r4", "r5");
   }
 
   @Test
@@ -105,19 +107,29 @@ public class GenerateSplitsTest {
     List<String> args = List.of(rfilePath, "-ss", "21", "-sf", splitsFilePath);
     log.info("Invoking GenerateSplits with {}", args);
     GenerateSplits.main(args.toArray(new String[0]));
-    verifySplitsFile("r2", "r4", "r6");
+    verifySplitsFile(false, "r2", "r4", "r6");
   }
 
-  private void verifySplitsFile(String... splits) throws IOException {
-    String splitsFile = Files.readString(Paths.get(splitsFilePath));
-    assertEquals(splits.length, splitsFile.split("\n").length);
-    for (String s : splits) {
-      assertTrue(splitsFile.contains(s), "Did not find " + s + " in: " + splitsFile);
+  private void verifySplitsFile(boolean encoded, String... splits) throws IOException {
+    String[] gSplits = Files.readString(Path.of(splitsFilePath)).split("\n");
+    assertEquals(splits.length, gSplits.length);
+    TreeSet<String> expectedSplits =
+        Arrays.stream(splits).collect(Collectors.toCollection(TreeSet::new));
+    TreeSet<String> generatedSplits = Arrays.stream(gSplits).map(s -> decode(encoded, s))
+        .map(String::new).collect(Collectors.toCollection(TreeSet::new));
+    assertEquals(expectedSplits, generatedSplits,
+        "Failed to find expected splits in " + generatedSplits);
+  }
+
+  private String decode(boolean decode, String string) {
+    if (decode) {
+      return new String(Base64.getDecoder().decode(string), UTF_8);
     }
+    return string;
   }
 
   @Test
-  public void testErrors() {
+  public void testErrors() throws IOException {
     List<String> args = List.of("missingFile.rf", "-n", "2");
     log.info("Invoking GenerateSplits with {}", args);
     assertThrows(FileNotFoundException.class, () -> main(args.toArray(new String[0])));
@@ -132,11 +144,12 @@ public class GenerateSplitsTest {
     e = assertThrows(IllegalArgumentException.class, () -> main(args3.toArray(new String[0])));
     assertTrue(e.getMessage().contains("Requested number of splits and"), e.getMessage());
 
-    File dir1 = new File(tempDir, "dir1/");
-    File dir2 = new File(tempDir, "dir2/");
-    assertTrue(dir1.mkdir() && dir2.mkdir(), "Failed to make new sub-directories");
+    Path dir1 = Files.createDirectories(tempDir.resolve("dir1"));
+    Path dir2 = Files.createDirectories(tempDir.resolve("dir2"));
+    assertTrue(Files.exists(dir1) && Files.exists(dir2), "Failed to make new sub-directories");
 
-    List<String> args4 = List.of(dir1.getAbsolutePath(), dir2.getAbsolutePath(), "-n", "2");
+    List<String> args4 =
+        List.of(dir1.toAbsolutePath().toString(), dir2.toAbsolutePath().toString(), "-n", "2");
     log.info("Invoking GenerateSplits with {}", args4);
     e = assertThrows(IllegalArgumentException.class, () -> main(args4.toArray(new String[0])));
     assertTrue(e.getMessage().contains("No files were found"), e.getMessage());
@@ -154,6 +167,41 @@ public class GenerateSplitsTest {
     desired = getEvenlySpacedSplits(10, 9, numSplits(10));
     assertEquals(9, desired.size());
     assertEquals(Set.of("001", "002", "003", "004", "005", "006", "007", "008", "009"), desired);
+  }
+
+  @Test
+  public void testNullValues() throws Exception {
+    trf.openWriter(false);
+    trf.writer.startNewLocalityGroup("lg1", newColFamByteSequence("cf1", "cf2"));
+    trf.writer.append(newKey("r1\0a", "cf1", "cq1", "L1", 55), newValue("foo1"));
+    trf.writer.append(newKey("r2\0b", "cf2", "cq1", "L1", 55), newValue("foo2"));
+    trf.writer.append(newKey("r3\0c", "cf2", "cq1", "L1", 55), newValue("foo3"));
+    trf.writer.startNewLocalityGroup("lg2", newColFamByteSequence("cf3", "cf4"));
+    trf.writer.append(newKey("r4\0d", "cf3", "cq1", "L1", 55), newValue("foo4"));
+    trf.writer.append(newKey("r5\0e", "cf4", "cq1", "L1", 55), newValue("foo5"));
+    trf.writer.append(newKey("r6\0f", "cf4", "cq1", "L1", 55), newValue("foo6"));
+    trf.closeWriter();
+
+    Path file = Files.createFile(tempDir.resolve("testGenerateSplitsWithNulls.rf"));
+    assertTrue(Files.exists(file), "Failed to create file: " + file);
+    try (var fileOutputStream = Files.newOutputStream(file)) {
+      fileOutputStream.write(trf.baos.toByteArray());
+    }
+    rfilePath = "file:" + file.toAbsolutePath();
+    log.info("Wrote to file {}", rfilePath);
+
+    Path splitsFile = Files.createFile(tempDir.resolve("testSplitsFileWithNulls"));
+    assertTrue(Files.exists(splitsFile), "Failed to create file: " + splitsFile);
+    splitsFilePath = splitsFile.toAbsolutePath().toString();
+
+    List<String> finalArgs = List.of(rfilePath, "--num", "2", "-sf", splitsFilePath);
+    assertThrows(UnsupportedOperationException.class,
+        () -> GenerateSplits.main(finalArgs.toArray(new String[0])));
+
+    List<String> args = List.of(rfilePath, "--num", "2", "-sf", splitsFilePath, "-b64");
+    GenerateSplits.main(args.toArray(new String[0]));
+    // Validate that base64 split points are working
+    verifySplitsFile(true, "r6\0f", "r3\0c");
   }
 
   /**
